--- a/modules/styles.mod/styles/colors.less
+++ b/modules/styles.mod/styles/colors.less
@@ -6,12 +6,14 @@
 @brand-info:            #49baff;
 @brand-info-secondary:  #64cdff;
 
+@gray-lightest:         #eee;
 @gray-lighter:          #d1d1d1;
 @gray-light:            #818387;
 @gray:                  #6a6a6a;
 @gray-dark:             #2b2d2f;
 
 @white:                 #fff;
+@white-almost:          #f5f5f5;
 @black:                 #000;
 
 @brand-primary-hover:   lighten(@brand-primary, 5%);
